# ChangeLog for dev-tex/europecv
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/europecv/ChangeLog,v 1.24 2008/10/18 16:52:23 nixnut Exp $

  18 Oct 2008; nixnut <nixnut@gentoo.org> europecv-20060424-r1.ebuild:
  Stable on ppc wrt bug 240646

  09 Oct 2008; Markus Meier <maekke@gentoo.org> europecv-20060424-r1.ebuild:
  amd64/x86 stable, bug #240646

  06 Oct 2008; Jeroen Roovers <jer@gentoo.org> europecv-20060424-r1.ebuild:
  Marked ~hppa (bug #237202).

  23 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  europecv-20060424-r1.ebuild:
  Add ~alpha/~ia64 wrt #237202

  21 Sep 2008; Brent Baude <ranger@gentoo.org> europecv-20060424-r1.ebuild:
  Marking europecv-20060424-r1 ~ppc64 for bug 237202

  04 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  europecv-20060424-r1.ebuild:
  keyword ~x86-fbsd

  04 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  europecv-20060424-r1.ebuild:
  The ucs package is needed; provided either by latex-unicode or
  texlive-latexrecommended. Bug #162807.

*europecv-20060424-r1 (03 Sep 2008)

  03 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  +europecv-20060424-r1.ebuild:
  rev bump to install in texmf-site and add examples useflag

  03 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  europecv-20040603.ebuild, europecv-20060424.ebuild:
  no need to depend on virtual/tetex, latex-package eclass depends on
  latex-base already

  03 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  -europecv-20060123-r1.ebuild:
  remove unused version

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*europecv-20060424 (29 Nov 2006)

  29 Nov 2006; Alexandre Buisse <nattfodd@gentoo.org>
  -europecv-20050408-r1.ebuild, +europecv-20060424.ebuild:
  Bump to 20060424 (bug #156571).
